<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
>

    <data>
        <variable name="viewmodel"
                  type="com.imeshke.firebaselogin.ui.auth.AuthViewModel"/>
    </data>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
        android:background="@color/colorLoginBg"
                    android:orientation="vertical"
                    tools:context=".ui.auth.LoginActivity"
                    android:scrollbarAlwaysDrawVerticalTrack="true">

        <RelativeLayout
                android:id="@+id/loginLayout"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/header_img"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/cat_mask"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <RelativeLayout
                    android:layout_below="@+id/header_img"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="30dp">


                    <TextView
                            android:labelFor="@id/text_email"
                            android:text="@string/email"
                            android:fontFamily="sans-serif-light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <EditText
                            android:id="@+id/text_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_email"
                            android:drawablePadding="10dp"
                            android:singleLine="true"
                            android:text="@={viewmodel.email}"
                            android:layout_marginBottom="10dp"
                            android:hint="imeshke.jaya@hotmail.com"
                            android:inputType="textEmailAddress"/>

                    <TextView
                            android:labelFor="@id/edit_text_password"
                            android:text="@string/password"
                            android:fontFamily="sans-serif-light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <EditText
                            android:drawablePadding="10dp"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@={viewmodel.password}"
                            android:id="@+id/edit_text_password"
                            android:drawableLeft="@drawable/ic_lock"
                            android:hint="@string/password"
                            android:inputType="textPassword"/>


                    <TextView
                            android:id="@+id/text_view_forget_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:paddingTop="5dp"
                            android:text="@string/forgot_password"/>


                    <Button
                            android:id="@+id/button_sign_in"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="22dp"
                            android:onClick="@{() -> viewmodel.login()}"
                            android:background="@color/colorPrimary"
                            android:text="@string/SignIn_header"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp"/>

                    <TextView
                            android:id="@+id/text_view_register"
                            android:layout_gravity="center_horizontal"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textAlignment="center"
                            android:onClick="@{(v) -> viewmodel.goToSignup(v)}"
                            android:text="Don't have an account.\nRegister Here"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>

        <ProgressBar
                android:id="@+id/progressbar"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

</layout>
